--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.0.1",
-    "bootstrap": "^4.4.1"
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
+    "mapbox-gl": "^1.9.1",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
